# test-annotated-publish

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  post_release.yml  release.yml
test_annotated_publish/: __init__.py
tests/: test_test_annotated_publish.py
