[project]
name = "test-annotated-publish"
version = "0.1.15"
description = "null"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Steven Silvester"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/blink1073/test-annotated-publish"
Changelog = "https://github.com/blink1073/test-annotated-publish/releases"
Issues = "https://github.com/blink1073/test-annotated-publish/issues"
CI = "https://github.com/blink1073/test-annotated-publish/actions"


[project.optional-dependencies]
test = ["pytest"]
